# mucuroso-rs

./: Cargo.toml  LICENSE
cli/: Cargo.toml
cli/src/: config.rs  main.rs  utils.rs
garmin_gym_fit_parser/: .gitignore  Cargo.toml
garmin_gym_fit_parser/src/: lib.rs
garmin_gym_fit_parser/src/exercise/: mod.rs
garmin_gym_fit_parser/src/fitdata/: mod.rs
garmin_gym_fit_parser/src/session/: mod.rs
garmin_gym_fit_parser/src/sets/: mod.rs
garmin_gym_fit_parser/src/user/: mod.rs
garmin_gym_fit_parser/src/utils/: mod.rs  parsers.rs
garmin_gym_fit_parser/src/utils/units/: length.rs  mass.rs  time.rs
lib/: Cargo.toml
lib/assets/: 19258265404_ACTIVITY.fit  GARMIN CONNECT EXERCICES - Exercices.csv
lib/output/: exercise_types.csv  sets.csv
lib/src/: constants.rs  exercise.rs  lib.rs  session.rs
lib/src/exercise/: barbell.rs  dumbbell.rs  machine.rs  target.rs
lib/src/garmin/: mod.rs
lib/src/garmin/garmin_exercises/: mod.rs
lib/src/garmin/garmin_session/: mod.rs
lib/src/garmin/garmin_sets/: mod.rs
lib/src/garmin/garmin_user/: mod.rs
lib/src/utils/: mod.rs
lib/src/utils/units/: length.rs  mod.rs  time.rs
mucuroso/: Cargo.toml
mucuroso/src/: exercise.rs  lib.rs  session.rs  set.rs  utils.rs
mucuroso/src/exercise/: barbell.rs  dumbbell.rs  machine.rs  target.rs
