[package]
name = "mucuroso-cli"
version = "0.1.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = "MIT"
description = "CLI to track weightlifting sessions from Garmin Fit files"

[[bin]]
name = "mucuroso"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
confy = "1.0.0"
exitcode = "1.1.2"
garmin_gym_fit_parser = { version = "0.1.0", path = "../garmin_gym_fit_parser" }
rustbreak = { version = "2.0.0", features = ["anyhow", "ron", "ron_enc"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
