[package]
name = "mucuroso"
version = "0.1.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = "MIT"
description = "Lib to track weightlifting sessions"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
csv = "1.3.1"
fitparser = "0.10.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
