[package]
name = "mucuroso"
version = "0.1.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = "MIT"
description = "Lib to track weightlifting sessions"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
garmin_gym_fit_parser = { version = "0.1.0", path = "../garmin_gym_fit_parser" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
